# agent-platform-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent_platform_os/: __init__.py  catalog.py  config.py  health.py
scripts/: bootstrap_services.py  check_health.py  install.py  platform_cli.py  run_service.py
tests/: test_catalog.py  test_health.py
