[project]
name = "agent-platform-os"
version = "1.0.1"
description = "Production AI-OS Control Plane workspace for secure ingress, durable execution, model routing, event coordination, and edge perception."
requires-python = ">=3.11,<3.14"
authors = [
  { name = "Agent Platform OS Maintainers" }
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.workspace]
members = ["services/*"]

[tool.hatch.build.targets.wheel]
packages = ["agent_platform_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "ASYNC", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
